--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     * {
       box-sizing: border-box;
     }
+    body {
+      font-family: 'Times New Roman', serif;
+}
 
     input {
       display: block;
