--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       box-sizing: border-box;
     }
     body {
-      font-family: 'Times New Roman', serif;
+      font-family: 'Verdana', serif;
 }
 
     input {
@@ -81,7 +81,7 @@
     }
 
     .table {
-      font-size: 20px;
+      font-size: 18px;
     }
 
     .margins {
