--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
 
     .homelink {
       text-decoration: none;
+      font-size: 45px;
     }
 
     .table {
-      font-size: 18px;
+      font-size: 16px;
     }
 
     .margins {
@@ -104,7 +105,7 @@
 
   <h1 class="title"><a href="/" class="homelink titlecolor">Uhh Yeah Notes</a></h1>
   <br>
-  <input autocomplete="off" autocapitalize="off" type="search" id="search" placeholder="..." class="background" />
+  <input autocomplete="off" autocapitalize="off" type="search" id="search" class="background" />
   <br><br>
   <a href="javascript:void(0)" onclick="changeOrder('latest')" class="order" id="latest">Latest</a>
   <a href="javascript:void(0)" onclick="changeOrder('earliest')" class="order" id="earliest">Earliest</a>
