--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
       "notes": "#54a7b5",
       "title": "#3b9691"
     },
+    {
+      // purpleish
+      "background": "#a790d2",
+      "notes": "#8494cb",
+      "title": "#486c81"
+    },
   ]
 
   var selected_style = styles[Math.floor(Math.random() * styles.length)];
