maybe title looks nicer in black?

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <body class="background margins">
 
-  <h1 class="title"><a href="/" class="homelink titlecolor">Uhh Yeah Notes</a></h1>
+  <h1 class="title"><a href="/" style="color:black" class="homelink">Uhh Yeah Notes</a></h1>
   <br>
   <input autocomplete="off" autocapitalize="off" type="search" id="search" class="background" />
   <br><br>
